--- a/templates/sprites.pug
+++ b/templates/sprites.pug
@@ -2,6 +2,7 @@ div.sprites-left
   div.assets-bar#sprite-asset-bar
     div.create-asset-button <i class="fa fa-plus-square"></i> #{translator.get("Sprite")}
     i.fa.fa-folder-plus.create-folder-button(title=translator.get("New Folder"))
+    div.create-asset-button#import-component-data-button <i class="fa fa-code"></i> #{translator.get("Import Component Code")}
 
   div.create-asset-button#create-sprite-button(style="display:none") <i class="fa fa-plus-square"></i> #{translator.get("Add Sprite")}
 
